--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
  Description:  Zandalar Tribe Theme
  Author: Buck Mulligan
  Created: 2019-08-17
- Version: 1.2
+ Version: 1.3
  License: GNU General Public License v2 or later
 */
 
@@ -132,11 +132,9 @@ ul, ol, li {
     padding: 0;
 }
 
-.splash h1 {
-    font-size: 48px;
-    color: #fff;
-    text-shadow: #333 0 3px 4px;
-    padding: 48px;
+.splash img {
+    width: 50%;
+    margin: 16px 0 0 16px;
 }
 
 /* Navigation */
