--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 /*
  Theme Name: ZandalarTribe.eu
  Theme URI:    http://zandalartribe.eu/
+ GitHub Theme URI: https://github.com/zandalartribe/zandalartribe.eu
  Description:  Zandalar Tribe Theme
  Author: Buck Mulligan
  Created: 2019-08-17
- Version: 1.4
+ Version: 1.4.1
  License: GNU General Public License v2 or later
 */
 
