Header image and footer content improvements

--- a/style.css
+++ b/style.css
@@ -124,7 +124,9 @@ ul, ol, li {
 
 .classic {
     text-align: center;
-    margin: 24px 0 8px;
+    margin: 8px 0 -16px;
+    position: relative;
+    z-index: 1;
 }
 
 .splash {
@@ -135,7 +137,7 @@ ul, ol, li {
 
 .splash img {
     width: 50%;
-    margin: 16px 0 0 16px;
+    margin: 16px 0 0 50%;
 }
 
 /* Navigation */
