Improve layout, add adverts sidebar.

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     background: #e9e9e9;
     color: #333;
     font: 14px/18px "Helvetica Neue", Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
 }
 
 h1, h2, h3 {
@@ -66,10 +67,18 @@ ul, ol, li {
 .single.panel {
     padding: 48px;
     min-height: 360px;
+    display: flex;
+    justify-content: space-between;
 }
 
-.single .panel p {
+.content {
+    flex-grow: 2;
     max-width: 60em;
+}
+
+.adverts {
+    flex-grow: 1;
+    margin-left: 32px;
 }
 
 .panel::before, 
@@ -118,7 +127,8 @@ ul, ol, li {
 /* Layout */
 .wrapper {
     margin: 0 auto;
-    max-width: 1280px;
+    max-width: 1260px;
+    min-width: 780px;
     width: 100%;
 }
 
@@ -130,9 +140,13 @@ ul, ol, li {
 }
 
 .splash {
-    height: 400px;
-    background: url(images/zandalar-tribe.jpg) no-repeat;
+    background: url(images/zandalar-tribe.jpg) no-repeat 50% 50%;
+    height: 176px;
     padding: 0;
+}
+
+.home .splash {
+    height: 400px;
 }
 
 .splash img {
@@ -176,6 +190,18 @@ ul, ol, li {
    margin: 0 24px;
    flex-grow: 1;
    flex-basis: 0;
+}
+
+@media (max-width: 1259px)  {
+    .news, .progression {
+        flex-wrap: wrap;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .news .panel,
+    .progression .panel {
+        margin-bottom: 24px;
+    }
 }
 
 /* Front page */
@@ -320,6 +346,11 @@ ul, ol, li {
     max-width: 100%;
 }
 
+/* Advert sidebar */
+.adverts figure {
+    margin: 0;
+}
+
 /* Footer */
 .copyright {
     padding: 24px 0 0;
@@ -334,10 +365,10 @@ ul, ol, li {
 }
 
 /* Mobile styles */
-@media (max-width: 768px)  {
+@media (max-width: 779px)  {
 
-    .classic, .story {
-        display: none;
+    .wrapper {
+        min-width: auto;
     }
 
     .news, .progression, .community-links ul {
